--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JUSTICE - Free Lawyer Website Template</title>
+    <title>Cabinet Caussé</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -28,11 +28,15 @@
 
 <body>
     <!-- Header Start -->
-    <div class="container-fluid">
+    <header class="container-fluid">
         <div class="row">
-            <div class="col-lg-3 bg-secondary d-none d-lg-block">
-                <a href="index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-4 text-primary text-uppercase">Justice</h1>
+            <div class="col-lg-3 d-none d-lg-block">
+                <a href="/" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
+                    <img src="/img/logo.png" alt=""/>
+                    <div class="title">
+                        <h1>Cabinet Caussé</h1>
+                        <span>Avocats au barreau</span>
+                    </div>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -95,49 +99,7 @@
                 </nav>
             </div>
         </div>
-    </div>
-    <!-- Header End -->
-
-
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5 pb-5">
-        <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel-1.jpg" style="object-fit: cover;">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Best Law Agency</h4>
-                            <h3 class="display-2 text-capitalize text-white mb-4">Our fighting Is for your justice</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#">Get An Appointment</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
-                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-4" style="letter-spacing: 3px;">Results You Deserve</h4>
-                            <h3 class="display-2 text-capitalize text-white mb-4">We prepared to oppose for you</h3>
-                            <a class="btn btn-primary py-3 px-5 mt-2" href="#">Call Us Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
-                <div class="btn btn-lg btn-secondary btn-lg-square">
-                    <span class="carousel-control-prev-icon"></span>
-                </div>
-            </a>
-            <a class="carousel-control-next" href="#header-carousel" data-slide="next">
-                <div class="btn btn-lg btn-secondary btn-lg-square">
-                    <span class="carousel-control-next-icon"></span>
-                </div>
-            </a>
-        </div>
-    </div>
-    <!-- Carousel End -->
-
+    </header>
 
     <!-- About Start -->
     <div class="container-fluid py-5">
@@ -147,8 +109,8 @@
                     <img class="img-fluid rounded" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7 mt-4 mt-lg-0">
-                    <h2 class="position-relative text-center bg-white text-primary rounded p-3 mt-4 mb-4 d-none d-lg-block" style="width: 350px; margin-left: -205px;">25 Years Experience</h2>
-                    <h6 class="text-uppercase">Learn About Us</h6>
+                    <h2 class="position-relative text-center bg-white text-primary rounded p-3 mt-4 mb-4 d-none d-lg-block" style="width: 350px; margin-left: -205px;">30 ans d'experience</h2>
+                    <h6 class="text-uppercase">A propos de nous</h6>
                     <h1 class="mb-4">We Provide Reliable And Effective Legal Services</h1>
                     <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
                     <a href="" class="btn btn-primary mt-2">Learn More</a>
