--- a/src/app.html
+++ b/src/app.html
@@ -28,8 +28,6 @@
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-
     <header>
         <a href="/" id="logo">
             <img src="img/logo.png" height="64" alt=""/>
@@ -68,9 +66,9 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Accueil</a>
-                        <a href="index.html#savoir-faire" class="nav-item nav-link">Nos savoir-faire</a>
-                        <a href="index.html#rdv" class="nav-item nav-link">Contact</a>
+                        <a href="/" class="nav-item nav-link active">Accueil</a>
+                        <a href="#savoir-faire" class="nav-item nav-link">Nos savoir-faire</a>
+                        <a href="#rdv" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="mailto:contact@causse-avocat.fr" class="btn btn-primary mr-3 d-none d-lg-block">Je prends un RDV</a>
                     <a href="mailto:contact@causse-avocat.fr" class="btn btn-primary mr-3 d-none d-lg-block">Je demande un devis</a>
@@ -79,71 +77,7 @@
         </section>
     </header>
 
-    <!-- About Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-5">
-                    <img class="img-fluid rounded" src="img/caroline-causse.jpg" alt="">
-                </div>
-                <div class="col-lg-7 mt-4 mt-lg-0">
-                    <h2 class="position-relative text-center bg-white text-primary rounded p-3 mt-4 mb-4 d-none d-lg-block" style="width: 350px; margin-left: -205px;">30 ans d'experience</h2>
-                    <h1 class="mb-4">CABINET CAROLINE CAUSSÉ</h1>
-                    <h6 class="text-uppercase">Avocats</h6>
-                    <p>Diplômée de l’Institut du Droit des Affaires, et du Magistère de Fiscalité des Entreprises, Me. Caroline Caussé, a créé un cabinet qui conseille et accompagne ses clients, entreprises et particuliers,  depuis plus de 30 ans. Le cabinet intervient, sur les problématiques civiles et commerciales, dans les domaines de la famille, de l’immobilier, du droit des affaires et de la réparation du préjudice corporel. Elle exerce avec rigueur, efficacité et discrétion tant dans le domaine du conseil  que du contentieux, tout en proposant conciliation et médiation, aux fins de prévenir les litiges et permettre la résolution de conflits.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
-
-    <!-- Features Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-6" style="min-height: 500px;">
-                    <div class="position-relative h-100 rounded overflow-hidden">
-                        <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
-                    </div>
-                </div>
-                <div class="col-lg-6 pt-5 pb-lg-5">
-                    <div class="feature-text bg-white rounded p-lg-5">
-                        <p>Depuis 30 ans nous accompagnons nos clients, entreprises et particuliers, pour leur offrir un service complet, dans les étapes de leur vie personnelle ou professionnelle, en mettant à leur service, la rigueur et le savoir faire d’une équipe dédiée et de professionnels partenaires de qualité.</p>
-                        <h2 class="mb-4">Nos atouts</h2>
-                        <div class="d-flex mb-4">
-                            <div class="btn-primary btn-md-square px-3" style="border-radius: 50px;">
-                            </div>
-                            <div class="ml-4">
-                                <h5>Compétence</h5>
-                            </div>
-                        </div>
-                        <div class="d-flex mb-4">
-                            <div class="btn-primary btn-md-square px-3" style="border-radius: 50px;">
-                            </div>
-                            <div class="ml-4">
-                                <h5>Réactivité</h5>
-                            </div>
-                        </div>
-                        <div class="d-flex mb-4">
-                            <div class="btn-primary btn-md-square px-3" style="border-radius: 50px;">
-                            </div>
-                            <div class="ml-4">
-                                <h5>Sérieux</h5>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="btn-primary btn-md-square px-3" style="border-radius: 50px;">
-                            </div>
-                            <div class="ml-4">
-                                <h5>Discrétion</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Features End -->
+    <div style="display: contents">%sveltekit.body%</div>
 
     <!-- Services Start -->
     <div class="container-fluid py-5">
