--- a/src/app.html
+++ b/src/app.html
@@ -71,7 +71,7 @@
                         <a href="#rdv" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="#rdv" class="btn btn-primary mr-3 d-none d-lg-block">Je prends un RDV</a>
-                    <a href="mailto:contact@causse-avocat.fr" class="btn btn-primary mr-3 d-none d-lg-block">Je demande un devis</a>
+                    <a href="#devis" class="btn btn-primary mr-3 d-none d-lg-block">Je demande un devis</a>
                 </div>
             </nav>
         </section>
@@ -124,9 +124,10 @@
             <div class="col-lg-4 col-md-6 mb-5">
                 <h4 class="font-weight-semi-bold text-primary mb-4">Plan du site</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
+                    <a class="text-white mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Accueil</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nos savoir-faire</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                    <a class="text-white mb-2" href="#rdv"><i class="fa fa-angle-right mr-2"></i>Je demande un rendez-vous</a>
+                    <a class="text-white mb-2" href="#devis"><i class="fa fa-angle-right mr-2"></i>Je demande un devis</a>
                 </div>
             </div>
         </div>
